[gd_scene load_steps=12 format=3 uid="uid://hfanbdpcg5ry"]

[ext_resource type="Script" path="res://weapons/Axe/axe_2.gd" id="1_hjcmt"]
[ext_resource type="Curve" uid="uid://vj3dx7inipbv" path="res://weapons/Axe/Axe_Curve.tres" id="2_2f3c4"]
[ext_resource type="PackedScene" uid="uid://uh4k8ebu7chu" path="res://effects/dust.tscn" id="5_6po5w"]
[ext_resource type="ArrayMesh" uid="uid://8m40bfpr1i3" path="res://weapons/Sword-0-Sword.obj" id="10_n8atm"]
[ext_resource type="Texture2D" uid="uid://butna4rf3v77n" path="res://weapons/Sword-0-Sword.png" id="11_x5acn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_okk0c"]
size = Vector3(0.5, 0.1, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_7ew0e"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6yyff"]
radius = 0.205453
height = 0.844125

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_22tgp"]
albedo_texture = ExtResource("11_x5acn")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hcdai"]
albedo_color = Color(0.0431373, 0.0431373, 0.0431373, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_vffg5"]
radius = 10.0

[node name="Axe" type="CharacterBody3D"]
transform = Transform3D(1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, 0, 0, 0)
collision_layer = 0
collision_mask = 3
script = ExtResource("1_hjcmt")
recall_curve = ExtResource("2_2f3c4")
throw_force = 30.0

[node name="HandleShape" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1.18689, 0)
shape = SubResource("BoxShape3D_okk0c")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(-2.18557e-07, 0, -2.428, 0, 4.31208, 0, 5, 0, -1.06131e-07, 0.0390791, -1.3559, -0.354701)
collision_layer = 0
collision_mask = 3

[node name="HeadShape" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1.74739, 0, -7.10543e-14, 0, 0.0855141, 0.0719136, 0.265545, -9.31323e-10)
shape = SubResource("BoxShape3D_7ew0e")

[node name="Area3D2" type="Area3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2.5, 0, -0.222956, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
transform = Transform3D(0.5, 0, 0, 0, 0.916521, 0, 0, 0, 0.5, 0, 0.0742344, 0)
shape = SubResource("CapsuleShape3D_6yyff")

[node name="Sword-0-sword2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, -0.810211, 0)
mesh = ExtResource("10_n8atm")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_22tgp")

[node name="dust" parent="." instance=ExtResource("5_6po5w")]
transform = Transform3D(1, -9.31761e-22, -2.13162e-14, 9.31761e-22, -1, 8.74228e-08, -2.13162e-14, -8.74228e-08, -1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_hcdai")
lifetime = 2.09

[node name="ricochetRange" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="ricochetRange"]
shape = SubResource("SphereShape3D_vffg5")

[connection signal="body_shape_entered" from="Area3D" to="." method="_on_area_3d_body_shape_entered"]
[connection signal="body_entered" from="Area3D2" to="." method="_on_area_3d_2_body_entered"]
[connection signal="body_exited" from="Area3D2" to="." method="_on_area_3d_2_body_exited"]
[connection signal="body_entered" from="ricochetRange" to="." method="_on_ricochet_range_body_entered"]
[connection signal="body_exited" from="ricochetRange" to="." method="_on_ricochet_range_body_exited"]
